# ai-description

./: .dockerignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc  Makefile  NOTICE  README.md  TODO  dev.tfvars  package.json  pyproject.toml  requirements-dev.txt
assets/: architecture.md  (+2 more)
lib/: pyproject.toml
lib/python/: pyproject.toml
lib/python/src/image_captioning_assistant/aws/: s3.py  secrets_manager.py
lib/python/src/image_captioning_assistant/client/: client_utils.py  data_prep.py  recover.py
lib/python/src/image_captioning_assistant/data/: data_classes.py  ground_truth.py
lib/python/src/image_captioning_assistant/evaluate/: evaluate_bias_analysis.py  evaluate_freeform_description.py  evaluate_structured_metadata.py  utils.py
lib/python/src/image_captioning_assistant/generate/: errors.py  prompts.py  user_prompt_metadata.txt  utils.py
lib/python/src/textract/: requirements.txt
lib/python/src/textract/src/: semsTextract.py
lib/ruby/: Gemfile
lib/ruby/src/: image_captioning_assistant.rb
lib/ruby/src/image_captioning_assistant/: logger.rb
lib/ruby/src/image_captioning_assistant/aws/: s3.rb  secrets_manager.rb
lib/ruby/src/image_captioning_assistant/client/: client_utils.rb  data_prep.rb
lib/ruby/src/textract/: requirements.txt  test_backend.py
lib/src/: image_captioning_assistant.rb
lib/src/image_captioning_assistant/: file.py  logger.rb
lib/src/image_captioning_assistant/aws/: s3.py  s3.rb
lib/src/image_captioning_assistant/data/: constants.py  constants.rb  data_classes.py  ground_truth.py
lib/src/image_captioning_assistant/evaluate/: evaluate_bias_analysis.py  evaluate_freeform_description.py  evaluate_structured_metadata.py  utils.py
lib/src/image_captioning_assistant/generate/: generate_bias_analysis.py  generate_structured_metadata.py  generate_structured_metadata.rb  prompts.py  prompts.rb  system_prompt.txt  system_prompt_court_order.txt  user_prompt.txt  user_prompt_bias_only.erb  user_prompt_bias_only.jinja  user_prompt_bias_only.txt  user_prompt_metadata.txt  utils.py
lib/src/image_captioning_assistant/orchestrate/: __init__.py  process_job.py
lib/src/textract/: test_backend.py
lib/src/textract/src/: client.py  config.py  ingestConfig.py  utils.py
(+262 files in other folders)
