[project]
name = "image-captioning-assistant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.36.2",
    "langchain-aws==0.2.11",
    "load_dotenv==0.1.0",
    "loguru==0.7.3",
    "pandas==2.2.3",
    "pydantic==2.10.5",
    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.36",
    "tqdm==4.67.1",
]